# actrax

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/: dependabot.yml
.github/workflows/: auto-merge.yml
config/: default.toml
migrations/log/: 0001_log_table.sql
migrations/token/: 0001_token_table.sql
migrations/user/: 0001_client_table.sql
src/: app_state.rs  main.rs
src/core/: mod.rs
src/core/client/: database.rs  mod.rs
src/core/log/: database.rs  mod.rs
src/core/tasks/: mod.rs  task.rs
src/core/token/: masked_token.rs  mod.rs
src/web/: mod.rs
src/web/routes/: client.rs  feeds.rs  log.rs  mod.rs  tasks.rs
