[package]
name = "actrax"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.6", features = ["tokio", "tracing", "ws", "macros"] }
axum-extra = { version = "0.10.3", features = ["typed-header"] }
tower-http = { version = "0.6.6", features = ["tracing", "tokio", "timeout", "cors", "trace"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls"] }

serde = { version = "1.0.219", features = ["derive"] }

tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
serde_json = "1.0.145"

jsonwebtoken = "10.0.0"
async-stream = "0.3.6"
futures = "0.3.31"
uuid = { version = "1.16.0", features = ["v4"] }
rand = "0.9.2"
toml = "0.9"
