[package]
name = "actrax"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.8", features = ["tokio", "tracing", "ws", "macros"] }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
tower-http = { version = "0.6.8", features = ["tracing", "tokio", "timeout", "cors", "trace"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls"] }

serde = { version = "1.0.219", features = ["derive"] }

tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }

tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
serde_json = "1.0.148"

jsonwebtoken = "10.2.0"
async-stream = "0.3.6"
futures = "0.3.31"
uuid = { version = "1.16.0", features = ["v4"] }
rand = "0.9.2"
toml = "0.9"
