[package]
name = "actrax"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.9", features = ["tokio", "tracing", "ws", "macros"] }
axum-extra = { version = "0.12.6", features = ["typed-header"] }
tower-http = { version = "0.6.10", features = ["tracing", "tokio", "timeout", "cors", "trace"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls"] }

serde = { version = "1.0.219", features = ["derive"] }

tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "macros"] }

tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
serde_json = "1.0.149"

jsonwebtoken = "10.3.0"
async-stream = "0.3.6"
futures = "0.3.32"
uuid = { version = "1.16.0", features = ["v4"] }
rand = "0.9.4"
toml = "1.1"
